--- a/res/drawable/green_bottom_border.xml
+++ b/res/drawable/green_bottom_border.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/liquid_asset_background" />
+            <solid android:color="@color/app_green" />
         </shape>
     </item>
     <item android:bottom="3dp">
