--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="gray">#CCCCCC</color>
     <color name="light_blue">#c1dbee</color>
     <color name="navy_blue">#165b8c</color>
-    <color name="liquid_asset_background">#23c7a1</color>
+    <color name="app_green">#23c7a1</color>
     <color name="light_red">#E82C0C</color>
 
     <!-- Parse -->
