--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,6 +9,10 @@
     <color name="navy_blue">#165b8c</color>
     <color name="app_green">#23c7a1</color>
     <color name="light_red">#E82C0C</color>
+    
+    <!-- InputItem -->
+    <color name="add_transaction_input_item_display_name">#80FFFFFF</color>
+    <color name="add_transaction_input_item_display_value">@color/white</color>
 
     <!-- Parse -->
     <color name="com_parse_ui_parse_login_button">#40000000</color>
