--- a/res/layout/activity_add_transaction.xml
+++ b/res/layout/activity_add_transaction.xml
@@ -8,7 +8,8 @@
     <ListView
         android:id="@+id/lvSteps"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        style="@style/AddTransactionUI.InputListView">
     </ListView>
 
     <FrameLayout
