--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -65,6 +65,26 @@
 
     <style name="DashboardLiquidAssetLabel" parent="@style/SmallText">
         <item name="android:textColor">@color/white</item>
+    </style>
+    
+    <!-- InputItem -->
+    <style name="AddTransactionUI" />
+    <style name="AddTransactionUI.InputItem.NameTextView" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/add_transaction_input_item_display_name</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="AddTransactionUI.InputItem.ValueTextView" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/add_transaction_input_item_display_value</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="AddTransactionUI.InputListView">
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:divider">@color/app_green</item>
     </style>
 
     <!-- Parse -->
