--- a/res/layout/activity_add_transaction.xml
+++ b/res/layout/activity_add_transaction.xml
@@ -15,7 +15,7 @@
     <FrameLayout
         android:id="@+id/flStepsContainer"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
     </FrameLayout>
 
 </LinearLayout>
