--- a/res/layout/fragment_amount_input.xml
+++ b/res/layout/fragment_amount_input.xml
@@ -3,47 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <EditText
-        android:id="@+id/etAmount"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:ems="10"
-        android:inputType="numberDecimal" >
+        android:gravity="center" >
 
-        <requestFocus />
-    </EditText>
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/AddTransactionUI.AmountInput.AmountSymbol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="6dp"
+            android:text="$" />
+
+        <EditText
+            android:id="@+id/etAmount"
+            style="@style/AddTransactionUI.AmountInput.AmountEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="0" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_toLeftOf="@+id/btnNext"
         android:orientation="horizontal" >
 
         <RadioButton
             android:id="@+id/rbExpense"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/label_expense" />
+            android:layout_marginRight="30dp"
+            android:button="@drawable/spent_option"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/rbIncome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_income" />
+            android:button="@drawable/gained_option" />
     </RadioGroup>
 
-    <Button
+    <ImageButton
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
-        android:text="Next" />
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="40dp"
+        android:background="@drawable/circle_check_button" />
 
 </RelativeLayout>
