Polish Name input fragment

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="add_transaction_input_item_display_value">@color/white</color>
     <color name="add_transaction_amount_display_value">@color/white</color>
     <color name="add_transaction_amount_hint_value">#80FFFFFF</color>
+    <color name="add_transaction_name_display_value">@color/white</color>
+    <color name="add_transaction_name_hint_value">#80FFFFFF</color>
 
     <!-- Parse -->
     <color name="com_parse_ui_parse_login_button">#40000000</color>
