--- a/res/drawable/spent_option.xml
+++ b/res/drawable/spent_option.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item android:drawable="@drawable/btn_spent_up" android:state_checked="true"></item>
-    <item android:drawable="@drawable/btn_spent_highlighted" android:state_checked="false"></item>
+    <item android:drawable="@drawable/btn_spent_checked" android:state_checked="true"></item>
+    <item android:drawable="@drawable/btn_spent_unchecked" android:state_checked="false"></item>
 
 </selector>
