--- a/res/menu/dashboard.xml
+++ b/res/menu/dashboard.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item 
         android:id="@+id/action_edit_profile"
-        android:icon="@drawable/ic_action_edit_profile"
+        android:icon="@drawable/profile_button"
         android:orderInCategory="100"
         android:showAsAction="always"
         android:title="@string/title_edit_profile"/>
