--- a/res/menu/dashboard.xml
+++ b/res/menu/dashboard.xml
@@ -9,7 +9,7 @@
     
     <item 
         android:id="@+id/action_add_goal"
-        android:icon="@drawable/ic_action_add"
+        android:icon="@drawable/add_button"
         android:orderInCategory="200"
         android:showAsAction="always"
         android:title="@string/title_add_goal"/>
