--- a/res/menu/liquid_assets.xml
+++ b/res/menu/liquid_assets.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_add_transaction"
-        android:icon="@drawable/ic_action_add"
+        android:icon="@drawable/add_button"
         android:orderInCategory="200"
         android:showAsAction="always"
         android:title="@string/title_add_transaction"/>
