--- a/res/layout/fragment_amount_input.xml
+++ b/res/layout/fragment_amount_input.xml
@@ -31,6 +31,7 @@
     </LinearLayout>
 
     <RadioGroup
+        android:id="@+id/rgType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
