--- a/res/layout/activity_new_goal.xml
+++ b/res/layout/activity_new_goal.xml
@@ -1,123 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_green"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/rlNewGoalName"
+    <ListView
+        android:id="@+id/lvSteps"
+        style="@style/AddTransactionUI.InputListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+    </ListView>
 
-        <TextView
-            android:id="@+id/tvNewGoalLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="@string/label_new_goal_name"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etNewGoalName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tvNewGoalLabel"
-            android:layout_alignParentRight="true"
-            android:hint="@string/sample_new_goal_name"
-            android:inputType="text" >
-
-            <requestFocus />
-        </EditText>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlNewGoalAmount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/tvAmountLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_amount"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etGoalAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tvAmountLabel"
-            android:layout_alignParentRight="true"
-            android:hint="@string/sample_total_payment"
-            android:inputType="numberDecimal" >
-        </EditText>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlNewGoalFrequency"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/tvNewGoalFrequencyLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_goal_frequency"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <Spinner
-            android:id="@+id/spinnerGoalFrequency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvNewGoalFrequencyLabel"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/tvNewGoalFrequencyLabel"
-            android:layout_marginLeft="120dp"
-            android:layout_toRightOf="@+id/tvNewGoalFrequencyLabel"
-            android:gravity="right"
-            android:paddingRight="5dp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlNewGoalDueDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/tvDueLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_goal_due_date"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etGoalDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tvDueLabel"
-            android:layout_alignParentRight="true"
-            android:hint="@string/sample_goal_due_date"
-            android:inputType="date" >
-        </EditText>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1" >
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/label_btn_cancel" />
-
-        <Button
-            android:id="@+id/btnCreateGoal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/label_btn_create_goal" />
-    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/flStepsContainer"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent" >
+    </FrameLayout>
 
 </LinearLayout>
