--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,6 +19,10 @@
     <color name="add_transaction_name_hint_value">#80FFFFFF</color>
     <color name="add_transaction_category_display_value">@color/white</color>
     <color name="add_transaction_category_dropdown_value">@color/darkgray</color>
+    
+    <!-- FrequencyFragment -->
+    <color name="frequency_fragment_item_display_text">@color/white</color>
+    <color name="frequency_fragment_item_dropdown_text">@color/darkgray</color>
 
     <!-- Parse -->
     <color name="com_parse_ui_parse_login_button">#40000000</color>
