--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="16dp" >
+    android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/etUsername"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="none"
-        android:enabled="false" />
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingTop="16dp" >
 
-    <EditText
-        android:id="@+id/etUserFullName"
-        android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/etUserFullName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/hint_user_fullname"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:enabled="false"
+            android:inputType="none" />
+
+        <EditText
+            android:id="@+id/etUserPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/hint_user_password"
+            android:inputType="textPassword" />
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hint_user_fullname"
-        android:inputType="textPersonName" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/logout_button"
+        android:onClick="onLogoutUser" />
 
-    <EditText
-        android:id="@+id/etUserPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hint_user_password"
-        android:inputType="textPassword" />
-
-</LinearLayout>
+</RelativeLayout>
