--- a/res/drawable/left_border.xml
+++ b/res/drawable/left_border.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item>
+    <item android:id="@+id/left_border_shape">
         <shape android:shape="rectangle" >
             <solid android:color="@color/navy_blue" />
         </shape>
     </item>
-    <item android:bottom="3dp">
+    <item android:left="3dp">
         <shape android:shape="rectangle" >
             <solid android:color="@color/lightgray" />
         </shape>
