--- a/res/layout/transactions_list_detail.xml
+++ b/res/layout/transactions_list_detail.xml
@@ -2,23 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightgray"
-    android:padding="8dp" >
+    android:background="@drawable/left_border"
+    android:padding="8dp"
+    android:id="@+id/rlTransactionsListDetail" >
 
     <TextView
-        android:id="@+id/tvTransactionCategory"
+        android:id="@+id/tvTransactionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerVertical="true" />
+        android:textSize="16sp"
+         />
+    
+    <TextView
+        android:id="@+id/tvTransactionCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTransactionName"
+        android:enabled="false"
+         />
 
     <TextView
         android:id="@+id/tvTransactionAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
         android:textStyle="bold" />
 
