--- a/res/layout/fragment_dashboard.xml
+++ b/res/layout/fragment_dashboard.xml
@@ -12,20 +12,34 @@
         android:layout_height="200dp"
         android:background="@color/app_green" >
 
-        <TextView
-            android:id="@+id/tvLiquidAsset"
-            style="@style/DashboardLiquidAssetBalance"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/sample_remaining_amount"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:orientation="vertical"
+            android:gravity="center" >
 
-        <TextView
-            android:id="@+id/tvLiquidAssetLabel"
-            style="@style/DashboardLiquidAssetLabel"
-            android:layout_below="@+id/tvLiquidAsset"
-            android:layout_centerHorizontal="true"
-            android:text="@string/label_total_liquid_assets" />
+            <TextView
+                android:id="@+id/tvLiquidAsset"
+                style="@style/DashboardLiquidAssetBalance"
+                android:text="@string/sample_remaining_amount"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/tvLiquidAssetLabel"
+                style="@style/DashboardLiquidAssetLabel"
+                android:text="@string/dashboard_total_cash_label" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btnTransactions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/btn_rightarrow_white" />
     </RelativeLayout>
 
     <LinearLayout
@@ -49,7 +63,7 @@
             <TextView
                 android:id="@+id/tvMonthlyGoalsLabel"
                 style="@style/SmallText"
-                android:text="@string/label_monthly_goals" />
+                android:text="@string/dashboard_monthly_goals_label" />
 
             <TextView
                 android:id="@+id/tvMonthlyGoals"
@@ -68,7 +82,7 @@
             <TextView
                 android:id="@+id/tvSpentTodayLabel"
                 style="@style/SmallText"
-                android:text="@string/label_spent_today"
+                android:text="@string/dashboard_spent_today_label"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
