--- a/res/layout/activity_goal_details.xml
+++ b/res/layout/activity_goal_details.xml
@@ -6,10 +6,12 @@
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/rlLendingCircle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3" 
-        android:background="@color/white">
+        android:background="@color/white"
+        android:visibility="gone">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vpLendingCircle"
@@ -30,7 +32,7 @@
         android:id="@+id/rlGoalData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="7"
         android:background="@color/white"
         android:orientation="vertical"
         android:layout_marginTop="2dp" >
@@ -77,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:background="@color/white"
         android:orientation="vertical" >
 
@@ -88,6 +90,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/make_goal_payment_button"
+            android:onClick="onMakePayment"
             android:contentDescription="@string/label_btn_goal_payment" />
 
         <TextView
@@ -111,91 +114,91 @@
             android:progressDrawable="@drawable/goal_payment_progress_bar" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/llFinalTarget"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_card"
-        android:orientation="vertical"
-        android:paddingBottom="10dp"
-        android:visibility="gone" >
+<!--     <LinearLayout -->
+<!--         android:id="@+id/llFinalTarget" -->
+<!--         android:layout_width="fill_parent" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_margin="10dp" -->
+<!--         android:background="@drawable/bg_card" -->
+<!--         android:orientation="vertical" -->
+<!--         android:paddingBottom="10dp" -->
+<!--         android:visibility="gone" > -->
 
-        <RelativeLayout
-            android:id="@+id/rlFinalTargetData"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+<!--         <RelativeLayout -->
+<!--             android:id="@+id/rlFinalTargetData" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="match_parent" > -->
 
-            <TextView
-                android:id="@+id/tvTotalTargetLabel"
-                style="@style/SmallText"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/label_receive"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+<!--             <TextView -->
+<!--                 android:id="@+id/tvTotalTargetLabel" -->
+<!--                 style="@style/SmallText" -->
+<!--                 android:layout_alignParentLeft="true" -->
+<!--                 android:layout_alignParentTop="true" -->
+<!--                 android:layout_marginLeft="10dp" -->
+<!--                 android:layout_marginTop="10dp" -->
+<!--                 android:text="@string/label_receive" -->
+<!--                 android:textAppearance="?android:attr/textAppearanceSmall" /> -->
 
-            <TextView
-                android:id="@+id/tvTotalTargetPayment"
-                style="@style/LargeAmount"
-                android:layout_alignLeft="@+id/tvTotalTargetLabel"
-                android:layout_below="@+id/tvTotalTargetLabel"
-                android:text="@string/sample_total_payment"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+<!--             <TextView -->
+<!--                 android:id="@+id/tvTotalTargetPayment" -->
+<!--                 style="@style/LargeAmount" -->
+<!--                 android:layout_alignLeft="@+id/tvTotalTargetLabel" -->
+<!--                 android:layout_below="@+id/tvTotalTargetLabel" -->
+<!--                 android:text="@string/sample_total_payment" -->
+<!--                 android:textAppearance="?android:attr/textAppearanceLarge" /> -->
 
-            <TextView
-                android:id="@+id/tvTargetDateLabel"
-                style="@style/SmallText"
-                android:layout_alignBaseline="@+id/tvTotalTargetLabel"
-                android:layout_alignBottom="@+id/tvTotalTargetLabel"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"
-                android:text="@string/label_due_date"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+<!--             <TextView -->
+<!--                 android:id="@+id/tvTargetDateLabel" -->
+<!--                 style="@style/SmallText" -->
+<!--                 android:layout_alignBaseline="@+id/tvTotalTargetLabel" -->
+<!--                 android:layout_alignBottom="@+id/tvTotalTargetLabel" -->
+<!--                 android:layout_alignParentRight="true" -->
+<!--                 android:layout_marginRight="20dp" -->
+<!--                 android:text="@string/label_due_date" -->
+<!--                 android:textAppearance="?android:attr/textAppearanceSmall" /> -->
 
-            <TextView
-                android:id="@+id/tvTargetDate"
-                style="@style/MediumAmount"
-                android:layout_alignRight="@+id/tvTargetDateLabel"
-                android:layout_alignTop="@+id/tvTotalTargetPayment"
-                android:text="@string/sample_due_date"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--             <TextView -->
+<!--                 android:id="@+id/tvTargetDate" -->
+<!--                 style="@style/MediumAmount" -->
+<!--                 android:layout_alignRight="@+id/tvTargetDateLabel" -->
+<!--                 android:layout_alignTop="@+id/tvTotalTargetPayment" -->
+<!--                 android:text="@string/sample_due_date" -->
+<!--                 android:textAppearance="?android:attr/textAppearanceMedium" /> -->
 
-            <TextView
-                android:id="@+id/tvTargetDateHuman"
-                style="@style/SmallText"
-                android:layout_alignRight="@+id/tvTargetDate"
-                android:layout_below="@+id/tvTargetDate"
-                android:text="@string/sample_due_date_human"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-        </RelativeLayout>
+<!--             <TextView -->
+<!--                 android:id="@+id/tvTargetDateHuman" -->
+<!--                 style="@style/SmallText" -->
+<!--                 android:layout_alignRight="@+id/tvTargetDate" -->
+<!--                 android:layout_below="@+id/tvTargetDate" -->
+<!--                 android:text="@string/sample_due_date_human" -->
+<!--                 android:textAppearance="?android:attr/textAppearanceSmall" /> -->
+<!--         </RelativeLayout> -->
 
-        <ProgressBar
-            android:id="@+id/pbGoalProgress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:progress="50" />
-    </LinearLayout>
+<!--         <ProgressBar -->
+<!--             android:id="@+id/pbGoalProgress" -->
+<!--             style="?android:attr/progressBarStyleHorizontal" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:layout_marginLeft="10dp" -->
+<!--             android:layout_marginRight="10dp" -->
+<!--             android:progress="50" /> -->
+<!--     </LinearLayout> -->
 
-    <LinearLayout
-        android:id="@+id/llPastPayments"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_card"
-        android:orientation="vertical"
-        android:paddingBottom="10dp"
-        android:visibility="gone" >
+<!--     <LinearLayout -->
+<!--         android:id="@+id/llPastPayments" -->
+<!--         android:layout_width="fill_parent" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_margin="10dp" -->
+<!--         android:background="@drawable/bg_card" -->
+<!--         android:orientation="vertical" -->
+<!--         android:paddingBottom="10dp" -->
+<!--         android:visibility="gone" > -->
 
-        <ListView
-            android:id="@+id/lvPastPayments"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
-    </LinearLayout>
+<!--         <ListView -->
+<!--             android:id="@+id/lvPastPayments" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="wrap_content" > -->
+<!--         </ListView> -->
+<!--     </LinearLayout> -->
 
 </LinearLayout>
