--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -10,6 +10,10 @@
     <color name="app_green">#23c7a1</color>
     <color name="light_red">#E82C0C</color>
     
+    <!-- Dashboard -->
+    <color name="dashboard_aggregate_label">#8D8D8D</color>
+    <color name="dashboard_aggregate_value">#4A4A4A</color>
+    
     <!-- Add Transaction -->
     <color name="add_transaction_input_item_display_name">#80FFFFFF</color>
     <color name="add_transaction_input_item_display_value">@color/white</color>
