--- a/res/layout/fragment_liquid_assets.xml
+++ b/res/layout/fragment_liquid_assets.xml
@@ -27,25 +27,23 @@
         android:layout_height="match_parent"
         android:visibility="invisible" >
 
-        <com.echo.holographlibrary.PieGraph
-            android:id="@+id/pgLiquidAssetDonutChart"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp" />
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/vpCharts"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" >
+        </android.support.v4.view.ViewPager>
 
         <LinearLayout
             android:id="@+id/llAssetsSummary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pgLiquidAssetDonutChart"
+            android:layout_below="@+id/vpCharts"
+            android:background="@drawable/gray_border"
             android:baselineAligned="false"
             android:divider="?android:dividerHorizontal"
             android:orientation="horizontal"
-            android:showDividers="middle"
-            android:background="@drawable/gray_border" >
+            android:showDividers="middle" >
 
             <LinearLayout
                 android:layout_width="match_parent"
