Polish Goal Items within the dashboard

--- a/res/layout/item_goal.xml
+++ b/res/layout/item_goal.xml
@@ -1,33 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/lightgray"
+    android:layout_height="wrap_content"
+    android:background="@color/dashboard_goal_item_background"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tvName"
-        style="@style/DashboardMediumText"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/sample_goal_name" />
-
-    <TextView
-        android:id="@+id/tvDueDate"
-        style="@style/SmallText"
-        android:layout_alignLeft="@+id/tvName"
-        android:layout_below="@+id/tvName"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="5dp"
-        android:text="@string/sample_due_date_human" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_toLeftOf="@+id/tvPaymentDue"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/tvMilestonesLeft"
+            style="@style/DashboardUI.GoalItem.Milestones"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/sample_milestones_left" />
+
+        <TextView
+            android:id="@+id/tvName"
+            style="@style/DashboardUI.GoalItem.Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/sample_goal_name" />
+
+        <TextView
+            android:id="@+id/tvDueDate"
+            style="@style/DashboardUI.GoalItem.DueDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/sample_due_date_human" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvPaymentDue"
-        style="@style/MediumAmount"
+        style="@style/DashboardUI.GoalItem.Amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/btnDetailView"
+        android:text="@string/sample_total_payment" />
+
+    <ImageView
+        android:id="@+id/btnDetailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/tvName"
-        android:layout_marginRight="29dp"
-        android:text="@string/sample_total_payment"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_centerVertical="true"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/rightarrow_gray_button" />
 
 </RelativeLayout>
