--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -64,28 +64,62 @@
     <!-- Dashboard UI -->
     <style name="DashboardUI" />
 
-    <style name="DashboardUI.TotalCash.Amount" parent="@android:style/TextAppearance">
+    <style name="DashboardUI.TotalCash" />
+    
+    <style name="DashboardUI.TotalCash.Amount">
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="DashboardUI.TotalCash.Label" parent="@android:style/TextAppearance">
+    <style name="DashboardUI.TotalCash.Label">
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="DashboardUI.AggregateLabel" parent="@android:style/TextAppearance">
+    <style name="DashboardUI.AggregateLabel">
         <item name="android:textColor">@color/dashboard_aggregate_label</item>
         <item name="android:textSize">13sp</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="DashboardUI.AggregateValue" parent="@android:style/TextAppearance">
+    <style name="DashboardUI.AggregateValue">
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
         <item name="android:textColor">@color/dashboard_aggregate_value</item>
         <item name="android:textSize">20sp</item>
+    </style>
+    
+    <style name="DashboardUI.GoalItem" />
+    
+    <style name="DashboardUI.GoalItem.Name">
+        <item name="android:textColor">@color/dashboard_goal_item_name_text</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+    
+    <style name="DashboardUI.GoalItem.Amount">
+        <item name="android:textColor">@color/dashboard_goal_item_name_text</item>
+        <item name="android:textSize">18sp</item>
+        <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
+    </style>
+    
+    <style name="DashboardUI.GoalItem.DueDate">
+        <item name="android:textColor">@color/dashboard_goal_item_due_date_text</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:drawableLeft">@drawable/img_time_gray</item>
+        <item name="android:drawablePadding">4dp</item>
+    </style>
+    
+    <style name="DashboardUI.GoalItem.DueDateSoon">
+        <item name="android:textColor">@color/dashboard_goal_item_due_date_soon_text</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:drawableLeft">@drawable/img_time_red</item>
+        <item name="android:drawablePadding">4dp</item>
+    </style>
+    
+    <style name="DashboardUI.GoalItem.Milestones">
+        <item name="android:textColor">@color/dashboard_goal_item_milestones_text</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <!-- Add Transaction UI -->
