--- a/res/layout/fragment_name_input.xml
+++ b/res/layout/fragment_name_input.xml
@@ -10,8 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:gravity="center"
-        android:hint="Lunch" >
+        android:gravity="center" >
 
         <requestFocus />
     </EditText>
