Cap first later of the input field

--- a/res/layout/fragment_name_input.xml
+++ b/res/layout/fragment_name_input.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:gravity="center" >
+        android:gravity="center"
+        android:inputType="textCapSentences" >
 
         <requestFocus />
     </EditText>
